# technicolor-haze-prism

./: .gitignore  CLAUDE.md  Cargo.toml  DEMO.md  Justfile  ROADMAP.md  demo-start.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
api-server/: pyproject.toml
api-server/src/: config.py  main.py  metrics_collector.py  report_generator.py  ssh_executor.py  test_runner.py  trex_driver.py
api-server/tests/: test_api.py  test_orchestrator.py
crates/prism-admin/: Cargo.toml
crates/prism-admin/src/: lib.rs  main.rs  models.rs  reconciler.rs  store.rs
crates/prism-admin/src/api/: mod.rs
crates/prism-admin/tests/: api_integration.rs
crates/prism-datapath/: Cargo.toml
crates/prism-datapath/src/: acl.rs  config.rs  conntrack.rs  lib.rs  main.rs  metrics.rs  offload.rs  offload_client.rs  pipeline.rs
crates/prism-doca-sys/: Cargo.toml  build.rs  wrapper.h
crates/prism-doca-sys/src/: mock_bindings.rs
crates/prism-offload-daemon/: Cargo.toml
crates/prism-offload-daemon/src/: aging.rs  doca_flow.rs  grpc_server.rs  lib.rs  main.rs  session_table.rs
crates/prism-proto/: Cargo.toml  build.rs
crates/prism-proto/proto/: session_offload.proto
crates/prism-proto/src/: lib.rs
deploy/systemd/: prism-admin.service  prism-offload-daemon.service
doca-firewall/: README.md  meson.build
doca-firewall/src/: ct_offload.c  ct_offload.h  flow_init.c  flow_init.h  main.c  metrics.c  metrics.h  policy.c  policy.h  rest_api.c  rest_api.h
docs/: ARCHITECTURE.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_V2.md
receiver/: Dockerfile  pyproject.toml  run.sh
receiver/src/: __init__.py  listener.py  web.py
receiver/src/templates/: index.html
receiver/tests/: test_listener.py  test_web.py
tc-firewall/: Dockerfile  README.md  pyproject.toml
tc-firewall/src/: audit.py  conntrack.py  ha.py  main.py  models.py  nat_manager.py  setup_topology.sh  snat_state.py  tc_manager.py  tenants.py
tc-firewall/tests/: conftest.py  test_audit.py  test_conntrack.py  test_ha.py  test_main.py  test_models.py  test_nat.py  test_snat_state.py  test_tc_manager.py  test_tenants.py  test_thread_safety.py
tests/: poc3-t1-dpdk-baseline.yaml  poc3-t10-sustained-load.yaml  poc3-t2-single-offload.yaml  poc3-t3-offload-sweep.yaml  poc3-t4-conn-storm.yaml  poc3-t5-mixed-workload.yaml  poc3-t6-rss-validation.yaml  poc3-t7-bidirectional.yaml  poc3-t8-offload-latency.yaml  poc3-t9-session-eviction.yaml
traffic-gen/: Dockerfile  pyproject.toml  run.sh
traffic-gen/src/: __init__.py  generator.py  web.py
traffic-gen/src/templates/: index.html
traffic-gen/tests/: test_generator.py  test_web.py
traffic-profiles/: stl_offload_sweep.py
tui/: README.md  prism_monitor.py
tui/tests/: test_monitor.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css
ui/src/api/: client.ts
ui/src/components/: ArchitectureDiagram.tsx  Dashboard.tsx  FirewallPanel.tsx  MetricsPanel.tsx  OffloadControls.tsx  ReceiverPanel.tsx  Reports.tsx  SessionTable.tsx  TestRunner.tsx  TopologyDiagram.tsx  TrafficGenPanel.tsx
ui/src/pages/: DashboardPage.tsx  RulesPage.tsx  TrafficFlowPage.tsx
