[project]
name = "prism-api-server"
version = "0.1.0"
description = "Prism PoC test orchestration and metrics backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "httpx-ws>=0.6.0",
    "anyio[trio]>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
