[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-receiver"
version = "0.1.0"
description = "Traffic receiver for Prism virtual firewall PoC"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
prism-receiver = "src.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
