[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-traffic-gen"
version = "0.1.0"
description = "Traffic generator for Prism virtual firewall PoC"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
prism-traffic-gen = "src.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
