[package]
name = "prism-admin"
version.workspace = true
edition.workspace = true

[dependencies]
prism-proto = { path = "../prism-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
