[package]
name = "prism-datapath"
version.workspace = true
edition.workspace = true

[dependencies]
prism-proto = { path = "../prism-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = "6"
